--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,21 @@
 version: '3.8'
 
 services:
-  app:
+  dev:
+    container_name: shermaniac-dnd-helper-express-dev
+    restart: always
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
+      args:
+        - INNER_PORT = ${INNER_PORT}
+        - OUTER_PORT = ${OUTER_PORT}
     ports:
-      - "3000:3000"
+      - ${OUTER_PORT}:${INNER_PORT}
+    env_file:
+      - .env
     volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
-    command: npm start
+      - ./:/usr/app
+      - ignore:/usr/app/node_modules
+volumes:
+  ignore:
