--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
   "version": "1.0.0",
   "license": "ISC",
   "scripts": {
-    "start": "node src/app.js"
+    "build": "tsc",
+    "start:dev": "node -r dotenv/config dist/server.js",
+    "start:watch": "nodemon -r dotenv/config src/server.ts"
   },
   "dependencies": {
     "express": "^4.21.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.0",
+    "dotenv": "^16.4.5",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
+    "nodemon": "^3.1.7",
     "prettier": "3.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0"
   },
   "keywords": []
