--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "dev": "nodemon -r dotenv/config src/server.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.744.0",
+    "@types/cookie-parser": "^1.4.8",
+    "aws-jwt-verify": "^5.0.0",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.9.0",
     "dotenv": "^16.4.5",
     "eslint": "^9.15.0",
