--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "strict": true,                        // Enable all strict type-checking options
     "esModuleInterop": true,               // Enable interoperability between CommonJS and ES modules
     "forceConsistentCasingInFileNames": true, // Enforce consistent file naming
-    "skipLibCheck": true                   // Skip type-checking of declaration files
+    "skipLibCheck": true,                   // Skip type-checking of declaration files,
+    "paths": {
+      "@/*": ["./src/*"]                    // Alias for the "src" directory
+    }
   },
   "include": ["src"],                      // Include all TypeScript files in the "src" folder
   "exclude": ["node_modules", "dist"]      // Exclude unnecessary directories
