--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.744.0",
     "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
     "aws-jwt-verify": "^5.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^4.21.1"
   },
   "devDependencies": {
