update docs and scripts

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -9,5 +9,5 @@
   "arrowParens": "avoid",
   "htmlWhitespaceSensitivity": "ignore",
   "endOfLine": "auto",
-  "proseWrap": "preserve"
+  "proseWrap": "always"
 }
