get login and new password challenge working

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3000
-INNER_PORT=3001
-OUTER_PORT=3000
-TTRPGZ_LOCAL=true
+COGNITO_USER_POOL_ID=us-east-1_viqXWJYfp
+COGNITO_CLIENT_ID=18i4uv8mln584m672fkv69cn7k
+DYNAMO_TABLE_ARN=arn:aws:dynamodb:us-east-1:056680897227:table/Data
+HOST=localhost
